# KNotify

./: LICENSE  README.MD  build.gradle.kts  settings.gradle.kts
composenotification/: build.gradle.kts
composenotification/src/androidMain/: AndroidManifest.xml
composenotification/src/androidMain/kotlin/: AndroidManifest.xml
composenotification/src/androidMain/kotlin/com/kdroid/composenotification/builder/: NotificationActionReceiver.kt  NotificationBuilder.android.kt  NotificationHelper.kt  NotificationInitializer.android.kt  NotificationInitializer.kt  NotificationManager.kt  NotificationReceiver.kt
composenotification/src/commonMain/kotlin/com/kdroid/composenotification/builder/: NotificationBuilder.kt  NotificationInitializer.kt  NotificationProvider.kt
composenotification/src/commonMain/kotlin/com/kdroid/composenotification/enums/: NotificationDuration.kt
composenotification/src/commonMain/kotlin/com/kdroid/composenotification/model/: DismissalReason.kt
composenotification/src/jsMain/kotlin/com/kdroid/composenotification/builder/: NotificationBuilder.js.kt  NotificationInitializer.js.kt
composenotification/src/jvmMain/c/linux/: main.c  notification_library.c  notification_library.h
composenotification/src/jvmMain/c/windows/: CMakeLists.txt
composenotification/src/jvmMain/kotlin/com/kdroid/composenotification/: Notifier.kt
composenotification/src/jvmMain/kotlin/com/kdroid/composenotification/builder/: NotificationBuilder.jvm.kt  NotificationInitializer.jvm.kt
composenotification/src/jvmMain/kotlin/com/kdroid/composenotification/platform/: LinuxNotifier.kt  WindowsNotifier.kt
composenotification/src/wasmJsMain/kotlin/com/kdroid/composenotification/builder/: NotificationBuilder.wasmJs.kt
convention-plugins/src/main/kotlin/: convention.publication.gradle.kts
demo/: build.gradle.kts
demo/src/androidMain/: AndroidManifest.xml
demo/src/androidMain/kotlin/com/kdroid/composenotification/demo/: MainActivity.kt
demo/src/androidMain/res/values/: strings.xml
demo/src/commonMain/kotlin/: Main.kt
demo/src/commonMain/kotlin/com/kdroid/composenotification/demo/: App.kt  Main.kt
demo/src/desktopMain/kotlin/: Main.kt
gradle/: libs.versions.toml
knotify/: build.gradle.kts
knotify/src/jvmMain/c/linux/: main.c  notification_library.c  notification_library.h
knotify/src/jvmMain/c/windows/example/: example1.c  example2.c
knotify/src/jvmMain/c/windows/src/: wintoastlibc.cpp  wintoastlibc.h  wintoastlibc_lazy.c
knotify/src/jvmMain/kotlin/: LinuxNotifier.kt  MacNotifier.kt  Notifier.kt  NotifierFactory.kt  OsUtils.kt  WindowsNotifier.kt
knotify/src/jvmMain/kotlin/com/kdroid/composenotification/: Demo.kt  NotificationProvider.kt  NotifierFactory.kt
knotify/src/jvmMain/kotlin/com/kdroid/composenotification/builder/: NotificationBuilder.kt
knotify/src/jvmMain/kotlin/com/kdroid/composenotification/demo/: ComposeApp.kt
knotify/src/jvmMain/kotlin/platform/: LinuxNative.kt  LinuxNotifier.kt  MacNotifier.kt  WindowsNative.kt  WindowsNotifier.kt
knotify/src/jvmMain/kotlin/utils/: OsUtils.kt
knotify/src/jvmTest/kotlin/: NotifierRealTest.kt  NotifierTest.kt
shared/: build.gradle.kts
shared/src/jvmMain/c/linux/: CMakeLists.txt  notification_library.c
shared/src/jvmMain/kotlin/com/kdroid/composenotification/: Notifier.kt  NotifierFactory.kt
(+36 files in other folders)
